--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "framer-motion": "^10.16.5",
     "jwt-decode": "^4.0.0",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
+    "pocketbase": "^0.19.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
