--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pocketbase": "^0.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.3"
