--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
