--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
