--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.1",
     "pocketbase": "^0.19.0",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^4.12.0",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
