--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
